* 2007-07-11 - manuel.kraft@open-xchange.com

 - Bugfix ID#8400 listresource: attribute available not in csv output

* 2007-07-11 - choeger@open-xchange.com

 - Bugfix ID#8397 listgroup: "email" in csv output

* 2007-07-09 - choeger@open-xchange.com

 - Bugfix ID#8336 Unable to change user using the changeuser script

* 2007-07-05 - choeger@open-xchange.com

 - Bugfix ID#7682 (user setup) deleted user is not automatically logged off (syntax error message is displayed)
 
* 2007-07-02 - choeger@open-xchange.com

 - Bugfix ID#8254 Cryptic error message when updatetask is started

* 2007-06-27 - manuel.kraft@open-xchange.com

  - Bugfix ID#8122 	RMI Authentication must be able to be switched off!

* 2007-06-20 - choeger@open-xchange.com

  - Bugfix ID#7310 createuser is not able to set imapLogin in user table

* 2007-06-19 - choeger@open-xchange.com

  - Bugfix ID#8076 German user created with english folders

* 2007-06-18 - manuel.kraft@open-xchange.com

 - Bugfix #7833	  	Renaming a resource with the same mail address doesn't work

* 2007-06-18 - choeger@open-xchange.com

 - Bugfix ID#7843 admin can only handle unix crypt in RMI auth
 - Bugfix ID#7757 (spam) spam training in GUI is available if spam is disabled for user
   added missing spam_trainer disable method
   
* 2007-06-15 - manuel.kraft@open-xchange.com

 - Bugfix #8019  	OXEE password of new created contexts is always secret

* 2007-06-13 - choeger@open-xchange.com

 - Bugfix ID#7972 Fresh install - admin cannot login
 - Bugfix ID#7803 FQDN is replaced by a DHCP value after installation
 
* 2007-06-12 - dennis.sieben@open-xchange.com

 - Bugfix #7816: User: Error when explicitly adding a new user to Group users

* 2007-06-12 - manuel.kraft@open-xchange.com

 - Bugfix #7886:  	Translation of "Spam"

* 2007-06-11 - dennis.sieben@open-xchange.com

 - Bugfix #7855: (umin) changing password of user imap is no longer available for user

* 2007-06-05 - choeger@open-xchange.com
